<resources>
    <string name="app_name">TMCAndroid</string>
    <string name="welcome_to_the_app">Welcome to the app</string>
    <string name="inter_username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_my_app">MyApp</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">Login Fragment</string>
    <string name="listview_fragment_label">ListView Fragment</string>
    <string name="recycler_fragment_label">Recycler Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="form">Form</string>
    <string name="your_firstname_and_lastname">Your firstname and lastname</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date">Date</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_fragment">Splash Fragment</string>
    <string name="my_first_splash">My first Splash</string>

</resources>