<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.tmcandroid.fragments.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/login_fragment">

        <action
            android:id="@+id/action_LoginFragment_to_ListViewFragment"
            app:destination="@id/ListViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/ListViewFragment"
        android:name="com.example.tmcandroid.fragments.ListViewFragment"
        android:label="@string/listview_fragment_label"
        tools:layout="@layout/listview_fragment">

        <action
            android:id="@+id/action_ListViewFragment_to_RecyclerViewFragment"
            app:destination="@id/RecyclerViewFragment" />
    </fragment>
    <fragment
        android:id="@+id/RecyclerViewFragment"
        android:name="com.example.tmcandroid.fragments.RecyclerViewFragment"
        android:label="@string/recycler_fragment_label"
        tools:layout="@layout/recyclerview_fragment" />


</navigation>